infowindow에 사진 띄우고 css 정리

--- a/src/App.css
+++ b/src/App.css
@@ -1,47 +1,75 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100&display=swap');
+
 *{
-  margin: 0 auto;
-  box-sizing: border-box;
+    margin: 0 auto;
+    box-sizing: border-box;
+    font-family: 'Noto Sans', sans-serif;
 }
 
 header{
-  text-align: center;
+    text-align: center;
 }
 
 .logo{
-  width: 142px;
-  height: 40px;
-  margin: 10px;
+    width: 142px;
+    height: 40px;
+    margin: 10px;
 }
 
 nav{
-  text-align: center;
-  display: flex;
-  width: 100%;
-  height: 50px;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #29CD00;
+    text-align: center;
+    display: flex;
+    width: 100%;
+    height: 50px;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #29CD00;
 }
 
 a{
-  text-decoration-line : none;
-  color: #FFFFFF;
-  border-left: 1px solid black;
-  flex: 1;
+    text-decoration-line : none;
+    color: #FFFFFF;
+    border-left: 1px solid white;
+    flex: 1;
 }
 
 a:nth-child(1){
-  border-left: none;
+    border-left: none;
 }
 
-.map {
-  width: 100%;
-  height: 600px;
-  align-items: center;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
-  border-style: solid;
-  border-width: medium;
-  border-color: #D8D8D8;
+main{
+    text-align: center;
+}
+
+.wea--title{
+    display: inline-block;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.wea--icon{
+    width: 128px;
+    height: 128px;
+}
+
+.wea--info{
+    font-size: 8px;
+}
+.iwBox {
+    display: flex;
+    width: 200px;
+    height: 150px;
+    background-color: rgb(255, 255, 255);
+    border: 3px solid #000;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+}
+.iwTitle {
+    width: 194px;
+    border-bottom: 3px solid #000;
+}
+.iwImage {
+    width: 194px;
+    height: 119px;
 }
