--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100&display=swap');
 *{
     margin: 0 auto;
-    box-sizing: border-box;font-family: 'KOTRAHOPE';
+    box-sizing: border-box;
+    font-family: 'KOTRAHOPE';
 }
 
 header{
@@ -71,26 +72,31 @@ main{
 .contentBox {
     width: 340px;
     height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .iwTitle {
-    width: 100%;
+    font-size: 20px;
     font-weight: bold;
     font-family: 'KOTRAHOPE';
 }
 .iwContent {
-    width: 100%;
-    font-size: 10px;
+    width: 340px;
+    height: 20px;
+    font-size: 15px;
     font-family: 'KOTRAHOPE';
+    margin-bottom: 15px;
 }
+
 .imgBox {
-    margin-top: 25px;
-    margin-bottom: 25px;
     width: 85%;
     height: 60%;
-
+    margin-bottom: 25px;
 }
 .iwImage {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
 }
+
